ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - deepakdev.me
    - www.deepakdev.me
    - api.deepakdev.me
    secretName: tls-secret
  rules:
  - host: deepakdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-client-service
            port:
              number: 80
  - host: www.deepakdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-client-service
            port:
              number: 80
  - host: api.deepakdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-server-service
            port:
              number: 3000
